--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "sever.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start":"node server.js",
-    "server": "nodemon server.js"
+    "start": "node server.js", 
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
