--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js", 
-    "dev": "nodemon server.js"
-  },
+  "start": "node server/server.js",
+  "dev": "nodemon server/server.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
