--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ SMTP_USER='rk4009023@gmail.com'
 SMTP_PASS='xddc gpwy egxc ywng' 
 SENDER_EMAIL='rk4009023@gmail.com'
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://authentication-platform-mern.onrender.com
