--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -18,17 +22,17 @@
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "vite": "^7.0.0",
     "@vitejs/plugin-react": "^4.5.2",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.6",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
+    "@eslint/js": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "vite": "^7.0.0"
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6"
   }
 }
